v 0.6.1 wip (fixing height)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="nome">
             <p>Michele</p>
-            <p>Ultimo accesso</p>
+            <p class="small">Ultimo accesso</p>
           </div>
         </div>
         <div class="options">
@@ -40,7 +40,7 @@
 
     <section>
       <div class="main">
-        
+
       </div>
     </section>
 
