--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="header_bar">
         <div class="icon_nome">
           <div class="icon">
-            <i class="fas fa-user"></i>
+            <img src="img/neo.png" alt="">
           </div>
           <div class="nome">
-            <p>Michele</p>
+            <p>Neo</p>
             <p class="small">Ultimo accesso</p>
           </div>
         </div>
@@ -34,12 +34,60 @@
     </header>
     <section>
       <div class="contacts_header">
+        <div class="main_contact">
+          <img src="img/avatar0.webp" alt="">
+          <div class="options_contacts">
+            <i class="fas fa-circle-notch"></i>
+            <i class="fas fa-comment-alt"></i>
+            <i class="fas fa-ellipsis-v"></i>
+          </div>
+        </div>
+        <div class="notification">
+          <div class="logo_notification">
+            <i class="fas fa-bell-slash"></i>
+          </div>
+          <h3>Ricevi notifiche per nuovi messaggi</h3>
+          <a href="#">Attiva notifiche</a>
+        </div>
+        <div class="searchbar">
+          <i class="fas fa-search"></i>
+          <input id="searchContacts" class="searchContacts" type="text" placeholder="Cerca" name="" value="">
+        </div>
+        <div class="list">
+          <div class="contacts_list">
+            <img src="img/neo.png" alt="">
+            <p>Neo</p>
+          </div>
+          <div class="contacts_list">
+            <img src="img/morpheus.png" alt="">
+            <p>Morpheus</p>
+          </div>
+
+          <div class="contacts_list">
+            <img src="img/trinity.png" alt="">
+            <p>Trinity</p>
+          </div>
+
+          <div class="contacts_list">
+            <img src="img/miope.png" alt="">
+            <p>Miope</p>
+          </div>
+          <div class="contacts_list">
+            <img src="img/smith.png" alt="">
+            <p>Agt. Smith</p>
+          </div>
+        </div>
+
 
       </div>
     </section>
 
     <section id="test">
       <div class="main">
+        <div class="receive">
+          <p class="txt"> test</p>
+          <p class="sendDate"> 14:08</p>
+        </div>
       </div>
     </section>
 
