--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <div class="contacts_list">
             <img src="img/miope.png" alt="">
-            <p>Miope</p>
+            <p>Niope</p>
           </div>
           <div class="contacts_list">
             <img src="img/smith.png" alt="">
@@ -84,10 +84,7 @@
 
     <section id="test">
       <div class="main">
-        <div class="receive">
-          <p class="txt"> test</p>
-          <p class="sendDate"> 14:08</p>
-        </div>
+
       </div>
     </section>
 
