--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
           <div class="contacts_list">
             <img src="img/miope.png" alt="">
-            <p>Niope</p>
+            <p>Niobe</p>
           </div>
           <div class="contacts_list">
             <img src="img/smith.png" alt="">
