--- a/index.html
+++ b/index.html
@@ -84,6 +84,19 @@
 
     <section id="test">
       <div class="main">
+        <div class="u_sender hide">
+          <div class="deleteOption">
+            <i class="fas fa-chevron-down"></i>
+            <div class="dropCont hide">
+              <ul>
+                <li>Info</li>
+                <li class="red">Delete message!</li>
+              </ul>
+            </div>
+          </div>
+          <p class="txt"></p>
+          <p class="sendDate"></p>
+        </div>
 
       </div>
     </section>
