--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
           <p class="sendDate"></p>
         </div>
 
+        <div class="receive" data-id="morpheus">
+          <div class="deleteOption">
+            <i class="fas fa-chevron-down"></i>
+            <div class="dropCont hide">
+              <ul>
+                <li>Info</li>
+                <li class="red">Delete message!</li>
+              </ul>
+            </div>
+          </div>
+          <p class="txt">Are you wake?</p>
+          <p class="sendDate">14:08</p>
+        </div>
+
       </div>
     </section>
 
